syntax = "proto3";

option java_package = "com.example.app.datastore";
option java_multiple_files = true;

message ProtoDiaryNoteList {
    repeated ProtoDiaryNote diary_notes = 1;
}

message ProtoDiaryNote {
    int64 id = 1;
    string title = 2;
    string content = 3;
    string date = 4;
    repeated ProtoPet pets = 5;
    repeated string images = 6;
}

message ProtoPet {
    string name = 1;
    string species = 2;
    string race = 3;
    string birthday = 4;
}